apps/base/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: arctic
spec:
  selector:
    app: homeassistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
  type: ClusterIP
